--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,29 +1,38 @@
 name: Deploy to GitHub Pages
-
 on:
   push:
     branches: [ main ]
-
 jobs:
-  deploy-to-github-pages:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-  
       - name: Setup .NET SDK
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: "9.x"
-
-      - name: Publish Blazor WASM project
-        run: dotnet publish src/BlazorWasmApp/BlazorWasmApp.csproj -c Release -o release --nologo
-
+      - name: Restore packages
+        run: dotnet restore src/Randactyl.BlazorWasm/Randactyl.BlazorWasm.csproj --nologo
+      - name: Build project
+        run: dotnet build src/Randactyl.BlazorWasm/Randactyl.BlazorWasm.csproj -c Release --nologo
+      - name: Publish project
+        run: dotnet publish src/Randactyl.BlazorWasm/Randactyl.BlazorWasm.csproj -c Release -o release --nologo
       - name: Add .nojekyll file
         run: touch release/wwwroot/.nojekyll
-
-      - name: Commit wwwroot to GitHub Pages branch
-        uses: JamesIves/github-pages-deploy-action@4.1.5
+      - name: Upload GitHub Pages artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-            token: ${{ secrets.GITHUB_TOKEN }}
-            branch: gh-pages
-            folder: release/wwwroot
+          path: release/wwwroot
+  deploy:
+    needs: build
+    permissions:
+      pages: write
+      id-token: write
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
