--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,8 +25,8 @@ jobs:
       # changes the base-tag in index.html from '/' to 'BlazorGitHubPagesDemo' to match GitHub Pages repository subdirectory
       - name: Change base-tag in index.html from / to /${{ steps.repo-name.outputs.repository-name }}/
         run: sed -i 's/<base href="\/" \/>/<base href="\/${{ steps.repo-name.outputs.repository-name }}\/" \/>/g' release/wwwroot/index.html
-      - name: Change base path in service-worker.published.js from / to ${{ steps.repo-name.outputs.repository-name }}
-        run: sed -i 's/const base = \"\/\"/const base = \"\/${{ steps.repo-name.outputs.repository-name }}\/\"/g' release/wwwroot/service-worker.published.js
+      - name: Change base path in service-worker.js from / to ${{ steps.repo-name.outputs.repository-name }}
+        run: sed -i 's/const base = \"\/\"/const base = \"\/${{ steps.repo-name.outputs.repository-name }}\/\"/g' release/wwwroot/service-worker.js
       - name: Upload GitHub Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
